--- a/frontend/hackerton2023/public/index.html
+++ b/frontend/hackerton2023/public/index.html
@@ -8,6 +8,6 @@
     <title>42 FUNDING</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="height: 100%; width: 100%;"></div>
   </body>
 </html>
