--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,12 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&display=swap"
+      rel="stylesheet"
+    />
     <link rel="icon" href="./42Seoul.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <title>42 FUNDING</title>
+    <style>
+      * {
+        font-family: 'Noto Sans KR', sans-serif;
+      }
+    </style>
   </head>
   <body>
-    <div id="root" style="height: 100%; width: 100%;"></div>
+    <div id="root" style="height: 100%; width: 100%"></div>
   </body>
 </html>
